--- a/style.css
+++ b/style.css
@@ -47,3 +47,31 @@
 .menu__link:not(.active) {
   margin-bottom: 2px;
 }
+
+.menu__section.right {
+  margin-right: 4px;
+}
+
+.menu__section.right .menu__icon {
+  padding: 12px;
+}
+
+.menu__profile {
+  position: relative;
+
+  width: 40px;
+  height: 40px;
+  padding: 4px;
+}
+
+.menu__avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+
+.menu__avatar--frame {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
