--- a/style.css
+++ b/style.css
@@ -119,3 +119,39 @@
   text-decoration: none;
   color: #058FD0;
 }
+
+/* Footer */
+
+.footer {
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 24px;
+
+  background: #F2F2F2;
+}
+
+.footer__section:not(:first-child) {
+  border-top: 1px solid #E4E4E4;
+}
+
+.footer__location {
+  padding: 10px 12px;
+
+  font-size: 16px;
+  color: #5F6368;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+
+  font-size: 13px;
+  color: #5F6368;
+}
+
+.footer__links a:not(:first-child) {
+  margin-left: 26px;
+}
