--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 /* Header */
 
 .menu {
@@ -80,6 +89,7 @@
 
 .content {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
 
