--- a/style.css
+++ b/style.css
@@ -165,3 +165,15 @@ body {
 .footer__links a:not(:first-child) {
   margin-left: 26px;
 }
+
+/* Table */
+
+@media (min-width: 760px) {
+  .content {
+    padding: 128px 64px;
+  }
+
+  .content__logo {
+    height: 128px;
+  }
+}
