--- a/style.css
+++ b/style.css
@@ -239,4 +239,18 @@ body {
   .content__search-buttons--search {
     margin-right: 24px;
   }
+
+  .content__offer {
+    border: 1px solid #058FD0;
+    border-radius: 24px;
+
+    font-size: 12.8px;
+    color: rgba(0, 0, 0, 0.8);
+    background: #C7E6FA;
+  }
+
+  .content__offer a {
+    text-decoration: none;
+    color: #058FD0;
+  }
 }
